HelloUltraviolet/Fixtures/RejectedSource/SourceText/ProhibitedControlCharacter/Expected.uv
//! Expected diagnostic metadata for the ProhibitedControlCharacter rejected-source specimen.

expectedDiagnostic("E-SRC-0104", "Span-Prohibited")
